# Wav2Aud

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml  publish.yml  tests.yml
docs/: DESIGN.md  _experience_template.html  _showcase_template.html  build_showcase.py
examples/: experience_demo.py  generate_all.py
site/: DEPLOY.md  index.html
tests/: test_ingest.py  test_live.py  test_phase2.py  test_pipeline.py
wav2aud/: __init__.py  baseline.py  cli.py  cochlea.py  ear.py  features.py  haircell.py  ingest.py  live.py  mapping.py  metrics.py  simulate.py  sources.py  synthesis.py  transduction.py  viz.py  waves.py
wav2aud/ros/: __init__.py  nodes.py
wave2aud/: __init__.py  audio_io.py  baseline.py  cli.py  geometry.py  ingest.py  live.py  mapping.py  metrics.py  pipeline.py  realtime.py  simulate.py  sources.py  synthesis.py  viz.py  waves.py
wave2aud/ros/: __init__.py  nodes.py
